--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
+    "@types/node": "^14.14.37",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
     "tsc": "^1.20150623.0",
     "typescript": "^4.2.3"
   },
   "scripts": {
-    "start": "ts-node src/index.ts",
-    "build": "tsc",
-    "dev": "nodemon --exec ts-node src/index.ts"
+    "start": "npx ts-node src/index.ts",
+    "build": "npx tsc",
+    "dev": "npx nodemon --exec npx ts-node src/index.ts"
+  },
+  "dependencies": {
+    "dotenv": "^8.2.0"
   }
 }
