--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
       "baseUrl": "./src",
       "esModuleInterop": true,
       "skipLibCheck": true,
-      "forceConsistentCasingInFileNames": true
+      "forceConsistentCasingInFileNames": true,
+      "lib": ["DOM"]
   },
   "include": ["src/**/*"]
 }
